--- a/portfolio1/.gitignore
+++ b/portfolio1/.gitignore
@@ -1,17 +1,3 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-/.idea/
-*.sqlite3
-/app/user_files/*
-*.local
-/src/assets/
-
 # Logs
 logs
 *.log
@@ -24,19 +10,20 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-../../Week_8/motion-3/.idea
+.idea
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-*.pyc
 
-__pycache__
-/media-files
-/static-files
+.env
+
+# vscode
+.vscode
