--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -46,6 +46,8 @@ jobs:
         with:
           # Upload dist repository
           path: './dist'
+      - name: Set DEPLOY_URL
+        run: echo "DEPLOY_URL=https://iamlydial.github.io/portfolio-v1/" >> $GITHUB_ENV
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
