--- a/portfolio1/package.json
+++ b/portfolio1/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://iamlydial.github.io/portfolio-v1/portfolio1/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
